This commit corrects the text align spelling

--- a/css/index.css
+++ b/css/index.css
@@ -274,5 +274,5 @@ h1 {
 
 .footer .copyright
 {
-  tetxt-align: center;
+  text-align: center;
 }
